# eddl_issues

./: .gitignore  README.md
issue_294/: CMakeLists.txt  README.md
issue_294/data/: data.pckl
issue_294/models/: fully-conn-with-output-sigmoid-start.onnx  fully-conn-with-output-softmax-start.onnx  keras-rnn-with-bn.h5  keras-rnn-without-bn.h5  pyeddl-rnn-with-bn.onnx  pyeddl-rnn-without-bn.onnx  rnn-with-output-sigmoid-start.onnx  rnn-with-output-softmax-start.onnx
issue_294/python/: extract_wings_sample.py  results-visualisation.py  rnn_wings.py  rnn_wings_keras.py
issue_294/scripts/: compare-keras-with-pyeddl.sh  python-results-visualisation.sh  results-visualisation.sh  run-fc-wings-extended.sh  run-fc-wings.sh  run-python-experiments.sh  run-rnn-wings-extended.sh  run-rnn-wings.sh  set_ld_library_path.sh
issue_294/src/: fully_conn_wings.cpp  rnn_wings.cpp
issue_319/: README.md  before_fit_keras_conv2D_cifar.onnx  init_eddl_cifar.cpp  init_keras_cifar.py  init_pytorch_cifar.py  plot_results.py
issue_319/outputs/: eddl_keras-init_output.txt  eddl_keras-pretrained-inference_output.txt  eddl_output.txt  eddl_pytorch-init_output.txt  eddl_pytorch-pretrained-inference_output.txt  keras_output.txt  keras_pytorch-init_output.txt  keras_pytorch-pretrained-inference_output.txt  pytorch_output.txt
issue_319/results/: eddl_keras-init_results.csv  eddl_keras-pretrained-inference_results.csv  eddl_pytorch-init_results.csv  eddl_pytorch-pretrained-inference_results.csv  eddl_results.csv  keras_pytorch-init_results.csv  keras_pytorch-pretrained-inference_results.csv  (+2 more)
(+11 files in other folders)
